[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Codes/NpcNavigation.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 504 )

[node name="NpcNavigation" type="Navigation2D" groups=["NpcNavigation"]]
visible = false
position = Vector2( 512, 150 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
position = Vector2( -512, -150 )

[node name="Spawner" type="Node" parent="."]
script = ExtResource( 1 )

[node name="SpawnLeft" type="Position2D" parent="Spawner" groups=["LeftSpawner"]]

[node name="Deletion" type="Area2D" parent="Spawner/SpawnLeft"]
collision_layer = 16
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Spawner/SpawnLeft/Deletion"]
shape = SubResource( 1 )

[node name="SpawnRight" type="Position2D" parent="Spawner" groups=["RightSpawner"]]

[node name="Deletion" type="Area2D" parent="Spawner/SpawnRight"]
collision_layer = 16
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Spawner/SpawnRight/Deletion"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="Spawner/SpawnLeft/Deletion" to="Spawner" method="_on_Deletion_body_entered"]
[connection signal="body_entered" from="Spawner/SpawnRight/Deletion" to="Spawner" method="_on_Deletion_body_entered"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
